syntax = "proto3";

option go_package = "./api/pb" ;

package pb ; 

service GreetService{
    rpc GreetName(Name) returns (GiveReply) {}
}

message Name {
    string name = 1 ; 
}

message GiveReply {
    string message = 1 ;
    string err = 2 ; 
}